[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["fdebrain <12777340+fdebrain@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
advent-of-code-data = "^1.3.2"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0"
isort = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
